<resources>
    <string name="app_name">Travelmantics</string>
    <string name="alc_4">ALC 4.0</string>
    <string name="email_sign_in">Sign in with email</string>
    <string name="success">Success</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="name"><![CDATA[First & last name]]></string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="sign_up">Sign Up</string>
    <string name="fill_all_fields">Please fill all fields</string>
    <string name="google_sign_in">Sign in with google</string>
    <string name="deal_image">Deal Image</string>
    <string name="no_deals">No Deals</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="new_deal">New Travel Deal</string>
    <string name="delete">Delete</string>
    <string name="select_image">Select image</string>
</resources>
